# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: diff.py  load_file.py
gendiff/scripts/: gendiff.py
gendiff/views/: default_view.py
tests/: test_default.py
tests/fixtures/: 1__before.json  1__expected.json  1__expected_default.txt
