[tool.poetry]
name = "shitcoding_gendiff"
version = "0.0.1"
description = "Shitcoding project #2: Gendiff script: check differences between two files"
authors = ["Shitcoder"]
packages = [
	{ include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
